--- a/templates/register.html
+++ b/templates/register.html
@@ -1,16 +1,35 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 
-{% block content %}
-<div class="container-fluid">
+
+<!--<div class="container-fluid">
     <div class="row">
         <div class="col-md-8 left">
             <form method="POST" class="form-group">
                 {% csrf_token %}
-                {{ form | crispy}}
+                {{ form | crispy }}
                 <button type="submit" class="btn btn-success">Register</button>
             </form>
         </div>
     </div>
-</div>
+</div>-->
+
+{% block content %}
+    <div class="content-section">
+        <form method="POST">
+            {% csrf_token %}
+            <fieldset class="form-group">
+                <legend class="border-bottom mb-4">Join Today</legend>
+                {{ form|crispy }}
+            </fieldset>
+            <div class="form-group">
+                <button class="btn btn-outline-info" type="submit">Sign Up</button>
+            </div>
+        </form>
+        <div class="border-top pt-3">
+            <small class="text-muted">
+                Already Have An Account? <a class="ml-2" href="{% url 'login' %}">Sign In</a>
+            </small>
+        </div>
+    </div>
 {% endblock content %}
