--- a/templates/base.html
+++ b/templates/base.html
@@ -36,14 +36,14 @@
                         </li>
                         {% if user.is_authenticated %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Logout</a>
+                            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                         </li>
                         {% else %}
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Register</a>
+                            <a class="nav-link" href="{% url 'register' %}">Register</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Login</a>
+                            <a class="nav-link" href="{% url 'login' %}">Login</a>
                         </li>
                         {% endif %}
                     </ul>
@@ -59,7 +59,7 @@
               </div>
             {% endfor %}
             {% endif %}
-            
+        s
             {% block content %}
             <!-- Content Goes here -->
             {% endblock content %}
