--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html class="h-100">
 
     <head>
-        <title>Strength First Blog</title>
+        <title>{% block title %}Strength First Blog{% endblock title %}</title>
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
@@ -35,6 +35,9 @@
                             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
                         {% if user.is_authenticated %}
+                        <li class="nav-item">
+                          <a class="nav-link" href="{% url 'add-post' %}">Add Post</a>
+                      </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{% url 'logout' %}">Logout</a>
                         </li>
