Correct error in blog urls and home page template to render individual posts

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-{% block title %} {% endblock title%}
 {% block content %}
 
 <!-- 
@@ -70,7 +69,7 @@
                     <h2 class="card-title">{{ post.title }}</h2>
                     <p class="card-text text-muted h6">{{ post.author }} | {{ post.created_on }} </p>
                     <p class="card-text">{{post.content|slice:":200" }}</p>
-                    <a href="{% url 'post-detail' post.slug  %}" class="btn btn-primary">Read More &rarr;</a>
+                    <a href="{% url 'post-detail' post.pk  %}" class="btn btn-primary">Read More &rarr;</a>
                     <p class="card-text text-muted h6"><i class="far fa-heart"></i>
                                 {{ post.number_of_likes }}</p>
                 </div>
