--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %} 
 {% load crispy_forms_tags %}
 
-{% block title %} New Post {% endblock title%}
+
 {% block content %}
 
 <div class="container">
@@ -9,6 +9,11 @@
         <div class="col-md-8 card mb-4  mt-3 left  top">
             <div class="card-body">
                 <h1>Add New Blog Post</h1>
+                <form method = "POST">
+                    {% csrf_token %}
+                    {{ form|crispy}}
+                    <br>
+                    <button type="submit" class="btn btn-primary  btn-lg">Submit</button>
             </div>
         </div>
     </div>
