Add functionality to delete a post

--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -11,6 +11,7 @@
         <h1>{% block title %} {{ post.title }} {% endblock title %}</h1>
         <p class=" text-muted">{{ post.author }} | {{ post.created_on }}</p>
         <a href="{% url 'update-post' post.pk %}">Edit</a>
+        <a href="{% url 'delete-post' post.pk %}">Delete</a>
         <p class="card-text ">{{ post.content | safe }}</p>
         <a href="{% url 'home' %}" class="btn btn-primary">Back to posts list</a>
       </div>
