--- a/templates/delete_post.html
+++ b/templates/delete_post.html
@@ -9,12 +9,19 @@
         <div class="col-md-8 card mb-4  mt-3 left  top">
             <div class="card-body">
                 <h1>Delete Post</h1>
-                <h3>Delete: {{ post.title }}</h3>
-                    <form method = "POST">
-                        {% csrf_token %}
-                        <strong>Are you sure you want to delete this post?</strong>
-                        <br>
-                        <button type="submit" class="btn btn-primary  btn-lg">Delete</button>
+                {% if user.is_authenticated %}
+                    {% if post.author.id == user.id or user.is_superuser %}
+                    <h3>Delete: {{ post.title }}</h3>
+                        <form method = "POST">
+                            {% csrf_token %}
+                            <strong>Are you sure you want to delete this post?</strong>
+                            <br>
+                            <button type="submit" class="btn btn-primary  btn-lg">Delete</button>
+                            <a href="{% url 'home' %}" class="btn btn-primary">Back to posts list</a>
+                    {% else %}    
+                        <h3>You don't have access to delete this post.</h3>
+                    {% endif %}  
+                {% endif %}           
             </div>
         </div>
     </div>
