--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -9,11 +9,17 @@
         <div class="col-md-8 card mb-4  mt-3 left  top">
             <div class="card-body">
                 <h1>Edit Post</h1>
-                    <form method = "POST">
-                        {% csrf_token %}
-                        {{ form|crispy}}
-                        <br>
-                        <button type="submit" class="btn btn-primary  btn-lg">Update</button>
+                {% if user.is_authenticated %}
+                    {% if post.author.id == user.id or user.is_superuser %}
+                        <form method = "POST">
+                            {% csrf_token %}
+                            {{ form|crispy}}
+                            <br>
+                            <button type="submit" class="btn btn-primary  btn-lg">Update</button>
+                    {% else %}    
+                        <h3>You don't have access to edit this post.</h3>
+                    {% endif %}  
+                {% endif %}      
             </div>
         </div>
     </div>
