--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -23,9 +23,9 @@
     <div class="col-md-8 card mb-4  mt-3 ">
       <div class="card-body">
         <!-- comments -->
-        <h2>{{ comments.count }} comments</h2>
+        <h2>{{ comments.count }} Comments</h2>
 
-        {% for comment in comments %}
+        {% for comment in post.comments.all %}
         <div class="comments" style="padding: 10px;">
           <p class="font-weight-bold">
             {{ comment.name }}
@@ -34,24 +34,10 @@
             </span>
           </p>
           {{ comment.body | linebreaks }}
+          <hr>
         </div>
         {% endfor %}
-      </div>
-    </div>
-    <div class="col-md-8 card mb-4  mt-3 ">
-      <div class="card-body">
-        {% if new_comment %}
-        <div class="alert alert-success" role="alert">
-          Your comment is awaiting approval
-        </div>
-        {% else %}
-        <h3>Leave a comment</h3>
-        <form method="post" style="margin-top: 1.3em;">
-          {{ comment_form | crispy }}
-          {% csrf_token %}
-          <button type="submit" class="btn btn-primary  btn-lg">Submit</button>
-        </form>
-        {% endif %}
+        <a href="{% url 'add-comment' post.pk %}" class="btn btn-primary">Add Comment</a>
       </div>
     </div>
   </div>
