--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -23,7 +23,7 @@
     <div class="col-md-8 card mb-4  mt-3 ">
       <div class="card-body">
         <!-- comments -->
-        <h2>{{ comments.count }} Comments</h2>
+        <h2>{{ post.comments.all.count }} Comments</h2>
 
         {% for comment in post.comments.all %}
         <div class="comments" style="padding: 10px;">
