--- a/templates/base.html
+++ b/templates/base.html
@@ -34,6 +34,16 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
                         </li>
+                        <li class="nav-item dropdown">
+                          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Topic
+                          </a>
+                          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Kettlebells</a></li>
+                            <li><a class="dropdown-item" href="#">Barbells</a></li>
+                            <li><a class="dropdown-item" href="#">Bodyweight</a></li>
+                          </ul>
+                        </li>
                         {% if user.is_authenticated %}
                             <li class="nav-item">
                               <a class="nav-link" href="{% url 'add-post' %}">Add Post</a>
