Amend category view function

--- a/templates/base.html
+++ b/templates/base.html
@@ -39,7 +39,7 @@
                             Topic
                           </a>
                           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Kettlebells</a></li>
+                        <li><a class="dropdown-item" href="{% url 'category' %}">Kettlebells</a></li>
                             <li><a class="dropdown-item" href="#">Barbells</a></li>
                             <li><a class="dropdown-item" href="#">Bodyweight</a></li>
                           </ul>
