--- a/templates/index.html
+++ b/templates/index.html
@@ -67,7 +67,7 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <h2 class="card-title">{{ post.title }}</h2>
-                    <p class="card-text text-muted h6">{{ post.author }} | {{ post.created_on }} </p>
+                    <p class="card-text text-muted h6">{{ post.author }} | {{ post.created_on }} | {{ post.topic }} </p>
                     <p class="card-text">{{post.content|slice:":200" }}</p>
                     <a href="{% url 'post-detail' post.pk  %}" class="btn btn-primary">Read More &rarr;</a>
                     <p class="card-text text-muted h6"><i class="far fa-thumbs-up"></i>
