--- a/templates/categories.html
+++ b/templates/categories.html
@@ -5,7 +5,9 @@
     <div class="row">
         <!-- Blog Entries Column -->
         <div class="col-md-8 mt-3 left">
-            {% for post in category_posts %}
+            {{ category_posts }}
+            <!--
+            {% for post in category_list %}
             <div class="card mb-4">
                 <div class="card-body">
                     <h2 class="card-title">{{ post.title }}</h2>
@@ -17,6 +19,7 @@
                 </div>
             </div>
             {% endfor %}
+            -->
             {% if is_paginated %}
             <nav aria-label="Page navigation">
                 <ul class="pagination justify-content-center">
