--- a/templates/categories.html
+++ b/templates/categories.html
@@ -5,9 +5,9 @@
     <div class="row">
         <!-- Blog Entries Column -->
         <div class="col-md-8 mt-3 left">
-            {{ category_posts }}
-            <!--
-            {% for post in category_list %}
+            <!--{{ category_posts }}-->
+            
+            {% for post in category_posts %}
             <div class="card mb-4">
                 <div class="card-body">
                     <h2 class="card-title">{{ post.title }}</h2>
